# 2242-ProgramAnalysis

./: .gitignore  04_week.py  README.md  compiler_script.py  oliver_week_02.py  pyproject.toml  solution.py  source-graph.dot  week3.dot  week_03.py
src/dtu02242/: main.py
src/dtu02242/interpreter/: interpreter.py  parser.py  run.py
src/dtu02242/old_files/: compiler_script.py  oliver_week_02.py  week_03.py
src/dtu02242/old_files/week2-rs/src/: main.rs
src/dtu02242/prototype-arrays-maks/: outOfRange.py
src/dtu02242/test_interpreter/: test_interpreter.py
src/dtu02242/tests/: test_interpreter.py  test_week06.py  test_week07.py  test_week07_oliver.py  test_week08.py
src/dtu02242/week_06/: bytecode.py  data_structures.py  interpreter.py  parser.py  range_abstraction.py  run.py
src/dtu02242/week_07/: bytecode.py  data_structures.py  interpreter.py  outOfRange.py  parser.py
src/dtu02242/week_07_oliver/: analyzer.py
src/dtu02242/week_08/: concolic.py  example.py  formula.stm  parser.py
src/old_files/week2-rs/: diagram.dot
src/test_interpreter/: test_interpreter.py
week2-rs/: Cargo.toml
week2-rs/src/: lib.rs
