[package]
name = "week2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
json = "0.12.4"
regex = "1.9.5"
tree-sitter = "0.20.10"
tree-sitter-java = "0.20.0"
tree-sitter-traversal = "0.1.2"

[build-dependencies]
cc="*"
